lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:31: error: not found: type Segment
def getLandingZone():Segment = {
                     ^Lander:42: error: not found: value Segment
			return Segment(premier,deuxieme)
                               ^Lander:45: error: not found: value Segment
	return Segment(premier,deuxieme)
               ^